tests/good/lexical/011-int-5.clap
val x = 0xcafebabe

