tests/bad/syntax/041-int-failed-binary.clap
val x = 0b0010011110001112000111
